snake speed increases with score increment

--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
         <!-- <img src="" alt="Snake logo"> -->
 
         <div class="direction-btn">
-            <div><button id="move-up">◀</button></div>
-            <div style="display: flex; align-items: center; justify-content: center;">
+            <div><button id="move-up">◀</button>
+            </div>
+            <div style="display: flex; align-items: center; justify-content: center; ">
                 <button id="move-left">◀</button>
-                <div id="pause-resume">
+                <button id="pause-resume">
                     Pause
-                </div>
+                </button>
 
                 <button id="move-right">▶</button>
             </div>
