more icons, favicon and screenshots added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="manifest" href="manifest.json">
     <!-- icons -->
+    <link rel="icon" href="images/favicon32.png">
     <link rel="apple-touch-icon" href="images/logo144.png">
     <link rel="apple-touch-icon" href="images/logo152.png">
     <link rel="apple-touch-icon" href="images/logo192.png">
